// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom logo slice should render correctly with data 1`] = `
<div>
  <section
    class="customer-logo-slice customer-logo-slice--white-theme"
    style="background-color: rgb(255, 255, 255);"
  >
    <div
      class="container"
    >
      <div
        class="customer-logo-slice_list aos-init aos-animate"
        data-aos="fade-up"
        data-testid="customer-logo-slice-container"
      >
        <div
          class="customer-logo-slice_logo"
          data-testid="customer-logo-slice-item"
        >
          <img
            alt="first customer logo"
            src="https://maddevs.io/Open-Graph.png"
          />
        </div>
        <div
          class="customer-logo-slice_logo"
          data-testid="customer-logo-slice-item"
        >
          <img
            alt="second customer logo"
            src="https://maddevs.io/Open-Graph.png"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Custom logo slice should render correctly without data 1`] = `
<div>
  <section
    class="customer-logo-slice customer-logo-slice--white-theme"
  >
    <div
      class="container"
    >
      <div
        class="customer-logo-slice_list"
        data-testid="customer-logo-slice-container"
      />
    </div>
  </section>
</div>
`;
